--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,23 +1,42 @@
+
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
+
     "version": "2.0.0",
+ 
     "tasks": [
-        {
-            "taskName": "chrome",
-            "type": "process",
-            "command": "chrome.exe",
-            "windows": [
-                "command": "C:\\Program Files (x86)\\Google\\Chrome\\Application\\Chrome.exe"
-            ],
-            "args": [
-                "${file}"
-            ],
-            "problemMatcher": [],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
+ 
+       {
+ 
+          "label": "Chrome",
+ 
+          "type": "process",
+ 
+          "command": "chrome.exe",
+ 
+          "windows": {
+ 
+             "command": "C:\\ProgramData\\Microsoft\\Windows\\Start Menu\\Programs\\Chrome.exe"
+ 
+          },
+ 
+          "args": [
+ 
+             "${file}"
+ 
+          ],
+ 
+          "problemMatcher": [],
+ 
+          "group": {
+ 
+             "kind": "build",
+ 
+             "isDefault": true
+ 
+          }       
+ 
         }
+ 
     ]
-}
+ 
+ }
